# optopus

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: deploy-pages.yml
data/: INSTANCES.md  benchmark_tsplib.toml  sample_jssp.toml
data/instances/: README.md
data/jssp/: ft06.txt
data/max_cut/: test_data.txt
data/qubo/: sample.txt
data/scripts/: gen_benchmark_configs.py  split_bqp.py  split_jobshop.py
data/tsp/: .gitignore
docs/: README.md  concepts.md  index.html  quickstart.md  search_state.md  traits.md
docs/benchmarks/: README.md  breakout_local_search.md  genetic_algorithm.md  iterated.md  late_acceptance_hill_climbing.md  lin_kernighan_helsgaun.md  lin_kernighan_helsgott.md  local_search.md  profiles.md  render.py  restart.md  rl_breakout_local_search.md  simulated_annealing.md  tabu_search.md  viewer.html
docs/guide/: benchmarking.md  composing.md  custom_heuristic.md  custom_problem.md  error_handling.md  stop_conditions.md
docs/heuristics/: README.md  beam_search.md  breakout_local_search.md  genetic_algorithm.md  late_acceptance.md  lkh.md  local_search.md  meta.md  (+5 more)
examples/: beam_search.rs  bls_for_max_cut.rs  custom_heuristic.rs  custom_problem.rs  max_cut.rs  prof_beam_maxcut.rs  prof_ga_maxcut.rs  prof_lkh_tsp.rs  prof_ls_formula.rs  prof_ls_maxcut_flip.rs  prof_ls_sat.rs  prof_ls_tsp.rs  prof_sa_maxcut.rs  prof_ts_maxcut_flip.rs  verify_max_cut.rs
profiles/: README.md
shellscripts/: curl_gset.sh  curl_tsplib.sh
src/: benchmark.rs  error.rs  lib.rs  main.rs  prelude.rs
tests/: benchmark_e2e.rs
(+386 files in other folders)
