[package]
name = "optopus"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A metaheuristic optimization library for combinatorial problems (MaxCut, QUBO, SAT, TSP, and more)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trash-iine/optopus"
readme = "README.md"
keywords = ["optimization", "metaheuristics", "simulated-annealing", "tabu-search", "maxcut"]
categories = ["algorithms", "science", "mathematics"]
authors = ["Trash-iine"]
exclude = ["data/", "docs/", "result/", ".claude/", ".github/"]

[dependencies]
rand = "0.9.2"
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
glob = "0.3.3"
chrono = "0.4.42"

[dev-dependencies]
toml = "0.9.8"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = false
